[package]
name = "solana-rust"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = { version = "2.1.4"}
solana-sdk = { version = "2.1.4"}
helius = { version = "0.2.2", default-features = false, features = ["rustls"] }
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.5.0"